// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentOpenWith/MultipleIntegrationsOpenWithButton should render children if provided 1`] = `
<Fragment>
  <IconOpenWith />
  <span
    className="bcow-btn-header-text"
  >
    <FormattedMessage
      defaultMessage="Open"
      id="be.open"
    />
  </span>
</Fragment>
`;

exports[`components/ContentOpenWith/MultipleIntegrationsOpenWithButton should render contents 1`] = `
<Fragment>
  <span
    className="bcow-btn-header-text"
  >
    <FormattedMessage
      defaultMessage="Open"
      id="be.open"
    />
  </span>
</Fragment>
`;
